--- a/user_params_nginxPlus.conf
+++ b/user_params_nginxPlus.conf
@@ -1,4 +1,8 @@
 # We use the same script for fetching individual metrics as we use for LLD
 # Change the path /var/lib/zabbix/nginx/scripts to where ever you place your 
 # Zabbix Scripts
-UserParameter=nginx.plus[*],/var/lib/zabbix/nginx/scripts/nginxPlusInfo.py $1
+#UserParameter=nginx.plus[*],/var/lib/zabbix/nginx/scripts/nginxPlusInfo.py $1
+
+UserParameter=nginx.plus[*],nginxPlusInfo.py --key $1
+
+UserParameter=nginx.plus.discovery[*],nginxPlusInfo.py --lld-$1
